@@ -590,6 +590,8 @@ This Work includes contributions authored by David E. Jones, not as a
                     <xs:restriction base="xs:token">
                         <xs:enumeration value="div"/>
                         <xs:enumeration value="span"/>
+                        <xs:enumeration value="ul"/>
+                        <xs:enumeration value="li"/>
                         <xs:enumeration value="header"/>
                         <xs:enumeration value="footer"/>
                         <xs:enumeration value="code"/>
